[package]
name = "intrusive-doubly-list"
version = "0.1.5"
edition = "2024"
license = "MIT"
description = "An efficient, zero-allocation circular intrusive doubly linked list in Rust. Features safe, lifetime-bounded iterators, unified ownership validation using a link_state flag to prevent node reuse bugs across multiple lists, and idiomatically optimized low-level pointer mechanics without any external heap allocation overhead."
documentation = "https://docs.rs/intrusive-doubly-list"
homepage = "https://github.com/KiyanSisakhti/intrusive-doubly-linked-list.git"
repository = "https://github.com/KiyanSisakhti/intrusive-doubly-linked-list.git"

[dependencies]


[dev-dependencies]
bolero = "0.13.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "prepush-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]